<resources>
    <string name="app_name">Movies App</string>
    <string name="title_movie_list">Movies</string>
    <string name="retry">Retry</string>
    <string name="search_hint">Search Movie</string>
    <string name="msg_unknown_error">An Error Occurred.</string>
    <string name="msg_empty_list">No Results.</string>
    <string name="title_detail">Movie Details</string>
    <string name="year">Year</string>
    <string name="plot">Plot</string>
    <string name="language">Language(s)</string>
    <string name="actor">Actor(s)</string>
    <string name="duration">Duration</string>
</resources>