<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="noScroll"
            app:title="@string/app_name"
            app:toolbarId="@+id/toolbar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:navigationIcon="@drawable/ic_baseline_chevron_left_24">

            </androidx.appcompat.widget.Toolbar>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:text="@string/title_detail"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/primary" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardCornerRadius="16dp">

                <ImageView
                    android:id="@+id/img_poster"
                    android:layout_width="180dp"
                    android:layout_height="240dp"
                    android:scaleType="fitXY"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/backgrounds/scenic" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                android:textColor="@color/primary"
                android:textStyle="bold"
                tools:text="@tools:sample/full_names" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/year"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/primary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/primary"
                tools:text="@tools:sample/date/ddmmyy" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/language"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/primary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/primary"
                tools:text="@tools:sample/cities" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/actor"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/primary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_actor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/primary"
                tools:text="@tools:sample/full_names" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/duration"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/primary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/primary"
                tools:text="@tools:sample/full_names" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/plot"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/primary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_plot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/primary"
                tools:text="@tools:sample/lorem/random" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/layout_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_error"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_error_24"
            app:tint="@color/primary" />

        <TextView
            android:id="@+id/error_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@color/primary"
            android:textSize="16sp"
            tools:text="No Internet Connection" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_retry"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/retry"
            android:textColor="@color/primary"
            app:strokeColor="@color/primary" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/layout_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="gone"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>